# contacts

./: Cargo.toml  README.md  default.nix  dev-setup.md  flake.nix
.github/workflows/: main.yml
zome/: Cargo.toml  README.md
zome/tests/: package-lock.json  package.json
zome/tests/src/: contacts.ts  index.ts
zome/workdir/dna/: contacts.dna  dna.yaml  sample.dna
zome/workdir/happ/: happ.yaml  sample.happ
zome/zomes/contacts/: Cargo.toml
zome/zomes/contacts/coordinator/: Cargo.toml
zome/zomes/contacts/coordinator/src/: lib.rs
zome/zomes/contacts/coordinator/src/entries/: contacts.rs
zome/zomes/contacts/coordinator/src/entries/contacts/: add_contacts.rs  add_to_category.rs  block_contacts.rs  create_category.rs  helpers.rs  in_blocked.rs  in_contacts.rs  list_added.rs  list_alias.rs  list_blocked.rs  list_category.rs  remove_contacts.rs  remove_from_category.rs  unblock_contacts.rs  update_alias.rs  utils.rs
zome/zomes/contacts/integrity/: Cargo.toml
zome/zomes/contacts/integrity/src/: lib.rs
zome/zomes/contacts/src/: lib.rs
zome/zomes/contacts/src/entries/: contacts.rs
zome/zomes/contacts/src/entries/contacts/: add_contacts.rs  add_to_category.rs  block_contacts.rs  create_category.rs  helpers.rs  in_blocked.rs  in_contacts.rs  list_added.rs  list_alias.rs  list_blocked.rs  list_category.rs  remove_contacts.rs  remove_from_category.rs  unblock_contacts.rs  update_alias.rs
zome/zomes/contacts/types/coordinator_types/: Cargo.toml
zome/zomes/contacts/types/coordinator_types/src/: lib.rs
zome/zomes/contacts/types/integrity_types/: Cargo.toml
zome/zomes/contacts/types/integrity_types/src/: lib.rs
