[workspace]
members = [
  "zome/zomes/contacts/integrity",
  "zome/zomes/contacts/coordinator",
  "zome/zomes/contacts/types/integrity_types",
  "zome/zomes/contacts/types/coordinator_types"
]

[workspace.dependencies]
hdi = "0.2.3"
hdk = "0.1.3"
serde = "1"
holochain = "0.1.5"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
