[package]
authors = ["nickolie.pangarungan@gmail.com", "tatsuya.g.sato@yumeville.com"]
description = "Coordinator for contacts zome"
edition = "2021"
license = "MIT"
name = "contacts_coordinator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "contacts_coordinator"

[dependencies]
derive_more = "0"
serde = "1"

contacts_integrity = {path = "../integrity"}
contacts_integrity_types = {path = "../types/integrity_types"}
contacts_coordinator_types = {path = "../types/coordinator_types"}
hdk = "0.0.142"
